Fix scroll jumping, better loading logic

--- a/Frontend/src/app/pages/home/home.page.scss
+++ b/Frontend/src/app/pages/home/home.page.scss
@@ -27,31 +27,27 @@
 
 .card-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
 
-  ion-card {
+  > div {
     width: 200px;
+    margin: 10px;
     box-shadow: 1px 1px 8px rgba(0,0,0,0.25);
 
     &:hover {
       background-color: var(--ion-item-background-hover);
     }
 
-    ion-card-content {
-      padding: 0;
+    .no-image {
+      display: flex;
 
-      .no-image {
-        display: flex;
-
-        img {
-          margin-top: 50px;
-          margin-bottom: 50px;
-          width: 100px;
-          height: 100px;
-          margin-left: auto;
-          margin-right: auto;
-        }
+      img {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        width: 100px;
+        height: 100px;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
 
